Fixe--no, worked around strange table bug in chrome where a tonne of whitespace randomly appears. Yay for ugly div h4x!

--- a/web/css/habitat.css
+++ b/web/css/habitat.css
@@ -1,1 +1,1 @@
-table#telems td { padding: 2px 6px; }
+div#telems div div { display: inline-block; font-family: monospace; }
